# oop_lab_seven

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tests.cpp
objects/dragon/: dragon.cpp  dragon.h
objects/knight/: knight.cpp  knight.h
objects/npc/: npc.cpp  npc.h
objects/princess/: princess.cpp  princess.h
